fix(snapshots): optimize session snapshots scheduling